--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -5,9 +5,14 @@ on: push
 jobs:
      first_job:
         runs-on: ubuntu-latest
+        
         steps:
+        - name : checkout repo
+          uses: actions/checkout@v5
+          
         - name: welcome message
           run: echo "My First github actions job"
+
         - name: list files
           run: ls
         
