--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -11,10 +11,10 @@ jobs:
           uses: actions/checkout@v5
           
         - name: welcome message
-          run: echo "My First github actions job"
+          run: |
+            echo "My First github actions job"
+            ls -ltra
+            cat README.md
 
-        - name: list files
-          run: ls -a
-        
-        - name: read file
-          run: cat README.md
+        - name: Generate ASCII artwordk
+
