--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,19 +10,7 @@ jobs:
       - name:  checkout repo
         uses: actions/checkout@v5
 
-      - name: Install Cowsay program
-        run: sudo apt-get install cowsay -y
-        
-      - name: Execute cowsay commands
-        run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
-
-      - name: test file exists
-        run:  grep -i "dragon" dragon.txt
-
-      - name: read file
-        run: cat dragon.txt
-
-      - name: list repo files
-        run: ls -ltra
+      - name: shell script
+        run: ./ascii-script.sh
 
 
