--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v5
 
       - name: shell script
-        run: ./ascii-script.sh
+        run: |
+          chmod +x ./ascii-script.sh
+          ./ascii-script.sh
 
 
