--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: shell script
         run: |
-          chmod +x ./ascii-script.sh
+          chmod +x ascii-script.sh
           ./ascii-script.sh
 
 
